# chest

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  compile_commands.json  flake.nix
libRchess/: board.cpp  board.h
src/: CMakeLists.txt  Rchess.cpp  chest.cpp
src/chest/chest/: chest.cpp  chest.h  engine.cpp  engine.h  enginestate.h  main.cpp  uci.cpp  uci.h
src/libChest/: attack.h  board.cpp  board.h  incremental.h  magic.cpp  magic.h  makemove.h  move.cpp  move.h  movebuffer.h  movegen.h  state.cpp  state.h  wrapper.h
src/libChest/libChest/: attack.h  board.cpp  board.h  build.h  debug.h  eval.h  eval.test.cpp  gen_attack.h  incremental.h  makemove.h  makemove.test.cpp  move.h  movebuffer.h  movegen.h  search.h  search.test.cpp  state.cpp  state.h  timemanagement.h  util.h  wrapper.h  zobrist.h
src/libRchess/: board.cpp  board.h  magic.cpp  magic.h  move.cpp  move.h  state.cpp  state.h
test/libChest/: perft.cpp
